samples/_failures_safe/1761373220_fa86ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf0913dc.c: In function ‘main’:
./samples/SAFE/__tmp_cf0913dc.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
